responsive ok on iOS, not the same on Android, fix 3?

--- a/style.css
+++ b/style.css
@@ -23,8 +23,9 @@ h1 {
 }
 
 .container {
-  display: flex;
-  justify-content: center;
+  /* display: flex; */
+  /* justify-content: center; */
+  /* text-align: center; */
 }
 /* ************* */
 /*  MOBILE-FIRST */
@@ -33,7 +34,7 @@ h1 {
 .bg {
   background-color: #fff;
   border-radius: 2rem 2rem 0 0;
-  box-shadow: 0 0.2rem 1rem 0.5rem rgba(0, 0, 0, 0.1);
+
   margin-top: 5rem;
   padding: 3rem 0;
   display: flex;
@@ -258,6 +259,7 @@ input:focus,
     /* width: 42rem; */
     /* padding: 3rem; */
     border-radius: 2rem;
+    box-shadow: 0 0.2rem 1rem 0.5rem rgba(0, 0, 0, 0.1);
     /* gap: 0rem; */
   }
 
